--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
   background-color: #2c609c;
   color: #eee;
+}
+
+@media screen and (max-width: 600px) {
+  .list:nth-child(odd) {
+      background-color: blue;
+  }
 }
