--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,21 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
   background-color: #5384E0;
   color: #eee;
+}
+
+a {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+  .grid__layout:nth-child(4n),
+  .grid__layout:nth-child(4n+1) {
+    background-color: #3d60a2;
+  }
 }
