Update the application styling

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #5384e0;
+  background-color: #132d46;
   color: #eee;
 }
 
@@ -16,9 +16,17 @@ a {
   font-weight: bolder;
 }
 
-@media screen and (max-width: 600px) {
+/* .drop__shadow {
+  box-shadow: -10px -10px 30px #fff, 10px 10px 30px rgba(174, 174, 192, 0.4);
+} */
+
+/* .inner__shadow {
+  box-shadow: inset -10px -10px 10px rgba(174, 174, 192, 0.25), inset 10px 10px 10px #ffffff;
+} */
+
+/* @media screen and (max-width: 600px) {
   .grid__layout:nth-child(4n),
   .grid__layout:nth-child(4n+1) {
     background-color: #26619c;
   }
-}
+} */
